[project]
name = "ip_rotator"
authors = [
  { name="Anish", email="anishshakthivelnadar@gmail.com" },
]
description = "Hides Your Ip address in https requests"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml"
]

[project.urls]
"Homepage" = "https://github.com/Anish0612/ip_rotator"
"Bug Tracker" = "https://github.com/Anish0612/ip_rotator/issues"


[build-system]
requires = ["setuptools","setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]