[project]
name = "ip_rotator"
authors = [
  { name="Anish", email="anishshakthivelnadar@gmail.com" },
]
description = "Rotate IP In Http Request"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml"
]

dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/Anish0612/ip_rotator"
"Bug Tracker" = "https://github.com/Anish0612/ip_rotator/issues"


[build-system]
requires = ["setuptools","setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"